# Product_Registrion_API

./: .env  pyproject.toml
src/: main.py
src/config/: database.py  dependencies.py  settings.py
src/controller/: product_controller.py
src/domain/dto/: dtos.py
src/domain/model/: models.py
src/repository/: product_repository.py
src/service/: product_service.py
